[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pincer-telemetry"
version = "0.1.0"
description = "OpenTelemetry initialisation — gRPC-first OTLP exporter for Pincer and other apps"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-logging>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "types-croniter>=1.0.0",
    "types-qrcode>=8.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pincer_telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
extend-ignore = ["N814", "N818"]

[tool.ruff.lint.per-file-ignores]
# FastMCP tool parameters are declared with `Field(...)` in default arguments.
"mcp_servers/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

disable_error_code = [
    "type-arg",
    "no-any-return",
    "union-attr",
    "override",
    "assignment",
    "no-untyped-def",
    "no-untyped-call",
    "index",
    "arg-type",
    "operator",
    "return-value",
    "attr-defined",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104", "B310", "B608"]
